--- a/blogr.css
+++ b/blogr.css
@@ -225,7 +225,7 @@ footer{
     .nav{
         background-color: white;
         overflow: hidden;
-        margin-left: 145px;
+        margin-left: 83px;
         margin-top: -5px;
     }
     li{
@@ -241,7 +241,7 @@ footer{
         
 
     .open{
-        margin-right: 20px;
+        margin-right: 35px;
     
         
     }
@@ -267,6 +267,9 @@ footer{
     }
     .subdiv2 h3{
         font-size: 20px;
+    }
+    header, .sect1, .sect2, .sect3, footer{
+        overflow: hidden;
     }
 
     
@@ -340,7 +343,7 @@ footer{
         font-weight: bold;
     }
     .subdiv h3{
-        font-size: 15px;
+        font-size: 20px;
        
     }
     .list1{
